--- a/hw3/index.html
+++ b/hw3/index.html
@@ -14,7 +14,7 @@
         <input type="text">
         <input type="text">
 
-       <div id="roztasyvanya-course-item" class="...">
+       <div id="roztasyvanya-course-item" class="input-fill">
            <label for="">
                <div>Прибуття</div>
                 <input type="text" placeholder="some text">
