--- a/hw3/index.html
+++ b/hw3/index.html
@@ -14,36 +14,36 @@
 
 <body>
     <div class="div_a">
-        <form action="./product.html" class="form_d">
-            <div id="roztasyvanya-course-item" class="list__switch">
+        <form class="form_d">
+            <div class="list__switch">
                 <label for="">
                     <div>Розташування</div>
-                    <input type="text" placeholder="Куди Ви їдете" class="input-f">
+                    <input id="roztasyvanya-course-item" type="text" placeholder="Куди Ви їдете" class="input-f">
                 </label>
             </div>
 
-            <div id="pribyt-course-item" class="list__switch">
+            <div class="list__switch">
                 <label for="">
                     <div>Прибуття</div>
-                    <input type="text" placeholder="Додайте дати" class="input-f">
+                    <input id="pribyt-course-item" type="text" placeholder="Додайте дати" class="input-f">
                 </label>
             </div>
 
-            <div id="viezd-course-item" class="list__switch">
+            <div class="list__switch">
                 <label for="">
                     <div>Виїзд</div>
-                    <input type="text" placeholder="Додайте дати" class="input-f">
+                    <input id="viezd-course-item" type="text" placeholder="Додайте дати" class="input-f">
                 </label>
             </div>
 
-            <div id="gosti-course-item" class="list__switch">
+            <div class="list__switch">
                 <label for="">
                     <div>Гості</div>
-                    <input type="text" placeholder="Додайте гостей" class="input-f">
+                    <input id="gosti-course-item" type="text" placeholder="Додайте гостей" class="input-f">
                 </label>
             </div>
 
-            <button class="card__item--button"></button>
+            <button id="btn" class="card__item--button" ></button>
         </form>
     </div>
     <script src="./script.js"></script>
